# ucu-performance-engineering

./: .gitignore
arguments/: pointer2.cpp
lecture-2/: matrix_order.cpp
mpi/: CMakeLists.txt  basic_messages.cpp  main.cpp  pi.c
mpi-workshop/: Dockerfile
project-1/: .gitignore  CMakeLists.txt  Makefile  README.md  main.cpp  replace_path.sh
project-2/: CMakeLists.txt  main.cu
